@@ -20,11 +20,6 @@
 	
 	The sample above will run the script every 21 of each month at 10AM
 	
-	# crontab -l
-	# DO NOT EDIT THIS FILE - edit the master and reinstall.
-	# (/tmp/crontab.9543 installed on Fri Oct 28 04:44:10 2005)
-	# (Cron version -- $Id: crontab.c,v 2.13 1994/01/17 03:20:37 vixie Exp $)
-	0 10 21 * * php /var/lib/asterisk/agi-bin/libs_a2billing/crontjob/a2billing_autorefill.php
 ****************************************************************************/
 set_time_limit(0);
 error_reporting(E_ALL ^ (E_NOTICE | E_WARNING));
