@@ -19,11 +19,6 @@
 	day of week	 	0-7 (0 or 7 is Sun, or use names)
 
 	
-	# crontab -l
-	# DO NOT EDIT THIS FILE - edit the master and reinstall.
-	# (/tmp/crontab.9543 installed on Fri Oct 28 04:44:10 2005)
-	# (Cron version -- $Id: crontab.c,v 2.13 1994/01/17 03:20:37 vixie Exp $)
-	0 12 * * * php /var/lib/asterisk/agi-bin/libs_a2billing/crontjob/a2billing_batch_process.php
 ****************************************************************************/
 	set_time_limit(0);
 	error_reporting(E_ALL ^ (E_NOTICE | E_WARNING));
