@@ -19,12 +19,7 @@
 	day of week	 	0-7 (0 or 7 is Sun, or use names)
 	
 	The sample above will run the script every 21 of each month at 10AM
-	
-	# crontab -l
-	# DO NOT EDIT THIS FILE - edit the master and reinstall.
-	# (/tmp/crontab.9543 installed on Fri Oct 28 04:44:10 2005)
-	# (Cron version -- $Id: crontab.c,v 2.13 1994/01/17 03:20:37 vixie Exp $)
-	0 6 1 * * php /var/lib/asterisk/agi-bin/libs_a2billing/crontjob/a2billing_subscription_fee.php
+
 ****************************************************************************/
 
 set_time_limit(0);
@@ -194,7 +189,7 @@ write_log(LOGFILE_CRONT_SUBSCRIPTIONFEE, basename(__FILE__).' line:'.__LINE__."[
 	
 	
 	
-	
+
 /***************************************************************************
  *            Function to handle the currencies
  ***************************************************************************/
