@@ -33,6 +33,10 @@ base_currency = usd
 ; filename of the image that will be display at the top of the invoice (if not defined no image will appear ; path to place the image templates/default/images/)
 invoice_image = asterisk01.jpg
 
+; DID Billing - amount of day before the end of the monthly reservation to bill the customer to for the DID use
+; if the user dont have enough credit he will get an email asking him to refill
+didbilling_daytopay = 5
+
 
 ; CALL-BACK
 [callback]
